--- a/Model_p_final.ipynb
+++ b/Model_p_final.ipynb
@@ -5,7 +5,10 @@
     "colab": {
       "name": "Model_p_final.ipynb",
       "provenance": [],
-      "collapsed_sections": []
+      "collapsed_sections": [],
+      "mount_file_id": "1EZkDLuk8S9Zzn90dlKIoQZ7T7VUshjk0",
+      "authorship_tag": "ABX9TyPiNUjeqcfLudHG0MedJDF4",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -16,6 +19,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/nightKnight112/Bin_with_a_Brain/blob/main/Model_p_final.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "source": [
@@ -55,7 +68,7 @@
       "metadata": {
         "id": "I8UZlOHSUQPP"
       },
-      "execution_count": 1,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -78,7 +91,7 @@
       "metadata": {
         "id": "H5ten8gv8UvX"
       },
-      "execution_count": 2,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -99,7 +112,7 @@
       "metadata": {
         "id": "11CjhbYg9Pre"
       },
-      "execution_count": 3,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -134,7 +147,7 @@
       "metadata": {
         "id": "B-t3ZgbP9WBp"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -165,7 +178,7 @@
         "id": "E6HOiJtd9qH3",
         "outputId": "f729375d-5609-4c04-8efd-35690627fd1a"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -190,7 +203,7 @@
         "id": "wl0xaM7B9u9d",
         "outputId": "cae0b172-f848-49ed-a7c2-c0ae4ba67d38"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -216,7 +229,7 @@
         "id": "GaBOfDma9znP",
         "outputId": "5f362f72-9bfc-4f1a-e647-38a687269d82"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -268,7 +281,7 @@
         "id": "MLivlIgq-HHa",
         "outputId": "99f7c0de-4f10-4d9e-c42b-848f971456d1"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -335,7 +348,7 @@
         "id": "soOkhK5L-dsP",
         "outputId": "ddb48d02-efc2-4482-cce6-8f01b4fc20db"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -378,7 +391,7 @@
       "metadata": {
         "id": "cimZSrDwAGpM"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -395,7 +408,7 @@
         "id": "JDDLXwPcAU3j",
         "outputId": "0e9d16a1-641a-4f63-d770-8cd600378398"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -437,7 +450,7 @@
         "id": "RTNDcm_cAiU4",
         "outputId": "0af0d614-48e3-416b-8db0-b6166ff62878"
       },
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -490,7 +503,7 @@
         "id": "pM_o8-x0A86W",
         "outputId": "c58275af-75f4-4a7e-c8ee-11880718e490"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -565,7 +578,7 @@
         "id": "q3ODmhUUBTlH",
         "outputId": "25683b4f-027e-46fa-9e8b-35634372c5f9"
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -636,7 +649,7 @@
         "id": "vS3bRG2_E62e",
         "outputId": "94277e3d-baeb-4968-f4b0-745d5a84764b"
       },
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -678,7 +691,7 @@
         "id": "0Y-6DhAkGpS3",
         "outputId": "f9ddc9fa-701a-4f74-f10c-ed1a8df16a54"
       },
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -717,12 +730,12 @@
     {
       "cell_type": "code",
       "source": [
-        "model2.save(\"waste_AG_model.h5\")"
+        "model2.save(\"bin_witha_brain_modelf.h5\")"
       ],
       "metadata": {
         "id": "oTt1iaHsLkIw"
       },
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -752,7 +765,7 @@
       "metadata": {
         "id": "Qu9inPw-NizJ"
       },
-      "execution_count": 77,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -771,7 +784,7 @@
         "id": "ABTbsMoiQ2nG",
         "outputId": "0b2cee67-ba11-4d6f-9b09-9fc3af2d626d"
       },
-      "execution_count": 78,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -804,7 +817,7 @@
       "metadata": {
         "id": "j09KjxE4Q3Lg"
       },
-      "execution_count": 79,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -820,7 +833,7 @@
         "id": "2qOEXHyxPgkQ",
         "outputId": "f6b068ce-a6c1-4adb-ce84-f73f1a901d33"
       },
-      "execution_count": 80,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -846,7 +859,7 @@
         "id": "JBVqgAoOPjju",
         "outputId": "797d1de9-2bb0-4f6c-906f-386e19e2487e"
       },
-      "execution_count": 81,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -868,7 +881,7 @@
       "metadata": {
         "id": "MfWs8w48PqDd"
       },
-      "execution_count": 84,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -883,7 +896,7 @@
         "id": "E148ehQ-PtCH",
         "outputId": "07d951a4-4e45-4f6a-de39-75f907c2d65b"
       },
-      "execution_count": 85,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
