Updated with proper comments

--- a/Model_p_final.ipynb
+++ b/Model_p_final.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "1EZkDLuk8S9Zzn90dlKIoQZ7T7VUshjk0",
-      "authorship_tag": "ABX9TyPiNUjeqcfLudHG0MedJDF4",
+      "authorship_tag": "ABX9TyMJE/aVUr0ndgY+Iv5GxOyD",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -68,8 +68,19 @@
       "metadata": {
         "id": "I8UZlOHSUQPP"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Data**\n",
+        "\n",
+        "The dataset contains images divided into two classes: organic waste and recycle waste and it is split into train data (85%) and test data (15%). Training dataset contains 22564 images while test dataset 2513 images. The data is imported into the colab from [here](https://www.kaggle.com/datasets/techsash/waste-classification-data) as archive(1).zip"
+      ],
+      "metadata": {
+        "id": "Qvl-UwvZby-l"
+      }
     },
     {
       "cell_type": "markdown",
@@ -91,7 +102,7 @@
       "metadata": {
         "id": "H5ten8gv8UvX"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -112,7 +123,7 @@
       "metadata": {
         "id": "11CjhbYg9Pre"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -149,6 +160,17 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Now we set our dataset into train, test and validation data.\n",
+        "\n",
+        "We use the flow_from_directory() method which allows to read the images directly from the directory and augment them while the neural network model is learning on the training data."
+      ],
+      "metadata": {
+        "id": "gSMz3RzxcZdf"
+      }
     },
     {
       "cell_type": "code",
