--- a/Model_p_final.ipynb
+++ b/Model_p_final.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "1EZkDLuk8S9Zzn90dlKIoQZ7T7VUshjk0",
-      "authorship_tag": "ABX9TyMJE/aVUr0ndgY+Iv5GxOyD",
+      "authorship_tag": "ABX9TyPzapSSJ80oWKdSh+nLNybH",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -872,7 +872,7 @@
     {
       "cell_type": "code",
       "source": [
-        "print(result)"
+        "print(result) #returning the label of the prediction made"
       ],
       "metadata": {
         "colab": {
