--- a/Model_p_final.ipynb
+++ b/Model_p_final.ipynb
@@ -3,11 +3,10 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "Model_p_final.ipynb",
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "1EZkDLuk8S9Zzn90dlKIoQZ7T7VUshjk0",
-      "authorship_tag": "ABX9TyPzapSSJ80oWKdSh+nLNybH",
+      "authorship_tag": "ABX9TyMZjES4BKIHWrI0LPH0zaao",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -32,19 +31,19 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Importing the necessary libraries required"
+        "# A Simple Waste Classification Model built on CNNs"
       ],
       "metadata": {
-        "id": "pfY3xwcpbJoh"
+        "id": "XQoltn9DeJOL"
       }
     },
     {
       "cell_type": "markdown",
       "source": [
-        "A Simple Waste Classification Model built on CNNs"
+        "Importing the necessary libraries required"
       ],
       "metadata": {
-        "id": "XQoltn9DeJOL"
+        "id": "pfY3xwcpbJoh"
       }
     },
     {
@@ -76,7 +75,9 @@
       "source": [
         "**Data**\n",
         "\n",
-        "The dataset contains images divided into two classes: organic waste and recycle waste and it is split into train data (85%) and test data (15%). Training dataset contains 22564 images while test dataset 2513 images. The data is imported into the colab from [here](https://www.kaggle.com/datasets/techsash/waste-classification-data) as archive(1).zip"
+        "The dataset contains images divided into two classes: organic waste and recycle waste and it is split into train data (85%) and test data (15%). Training dataset contains 22564 images while test dataset 2513 images. The data is imported into the colab from [here](https://www.kaggle.com/datasets/techsash/waste-classification-data) as archive(1).zip\n",
+        "\n",
+        "**Hence, the Train, Dev, Test split stands at 85, 7 and 8 % respectively**"
       ],
       "metadata": {
         "id": "Qvl-UwvZby-l"
@@ -133,7 +134,7 @@
         "\n",
         "We use ImageDataGenerator to create a transformation that rescales the images and applied data augmentation as well. We generate augumentation only for train data while validation data are only rescaling ones.\n",
         "\n",
-        "Keras **ImageDataGenerator** class provides a quick and easy way to augment of our images. It provides many of different augmentation techniques like standardization, shifts, rotation, flips, brightness change etc."
+        "Keras **ImageDataGenerator** class is used which provides a quick and easy way to label all of our images based on the directories they are in. Also, it provides many of different augmentation techniques like standardization, shifts, rotation, flips, brightness change etc."
       ],
       "metadata": {
         "id": "0pxl06aj9bhE"
@@ -153,7 +154,7 @@
         "\n",
         "\n",
         "val_datagen = ImageDataGenerator(rescale = 1./255,\n",
-        "                                 validation_split=0.5)"
+        "                                 validation_split=0.5) #rescaling for normalization of image features"
       ],
       "metadata": {
         "id": "B-t3ZgbP9WBp"
@@ -175,11 +176,12 @@
     {
       "cell_type": "code",
       "source": [
-        "Batch_size = 32\n",
+        "Batch_size = 32  # we can also take the batch size at 64, but taking 32 as the batch size provides the most optimal methods\n",
         "\n",
         "train_set = train_datagen.flow_from_directory(train_dir, class_mode='binary',\n",
         "                                              batch_size = Batch_size,\n",
-        "                                              target_size=(64, 64))\n",
+        "                                              target_size=(64, 64)) #flow_from_directory func takes the directory name as the label and labels all the imgs in it\n",
+        "                                              #initial img input into network is 64 * 64 * 3\n",
         "\n",
         "\n",
         "val_set = val_datagen.flow_from_directory(test_dir, class_mode='binary',\n",
@@ -212,6 +214,19 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Class Indices(binary classification)**\n",
+        "\n",
+        "1.   0 for Organic/Biodegradable Waste\n",
+        "2.   1 for Recyclable/Non-Biodegradable Waste\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "Z7YIXgmcSz0s"
+      }
     },
     {
       "cell_type": "code",
@@ -274,6 +289,15 @@
       ],
       "metadata": {
         "id": "mq4B9FKp-HjM"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "We have used **binary_crossentropy** as the loss function, However **RMsprop** could also be used as it allows us to tune the learning rate for the model"
+      ],
+      "metadata": {
+        "id": "pPZovFBsT5FG"
       }
     },
     {
@@ -361,7 +385,7 @@
         "    validation_data= val_set,\n",
         "    steps_per_epoch=int(len(train_set)/Batch_size),\n",
         "    verbose=1\n",
-        ")"
+        ") #we use only 5 epochs after some training as we see value loss increasing and accuracy decreasing, which serves as a eye-opener for the success of our next model"
       ],
       "metadata": {
         "colab": {
@@ -489,7 +513,7 @@
       "source": [
         "**Alternate Model(built for better accuracy)**\n",
         "\n",
-        "In this model we add additional convolution layers and we reduce the complexity of architecture in fully connected layer."
+        "In this model we add additional convolution layers alongwith maxpooling layers and reduce the complexity of architecture in fully connected layer."
       ],
       "metadata": {
         "id": "f-A94V-JA1oZ"
@@ -584,7 +608,6 @@
     {
       "cell_type": "code",
       "source": [
-        "#keep training until accuracy is greater than model1\n",
         "history_2 = model2.fit(\n",
         "    train_set,\n",
         "    epochs =15,\n",
@@ -897,8 +920,10 @@
       "source": [
         "if result[0][0] == 1:\n",
         "    prediction = 'Recyclable/Non-Biodegradable Waste'\n",
+        "elif result[0][0] == 0:\n",
+        "    prediction = 'Organic/Biodegradable Waste'\n",
         "else:\n",
-        "    prediction = 'Organic/Biodegradable Waste'"
+        "  print(\"Invalid Output\")"
       ],
       "metadata": {
         "id": "MfWs8w48PqDd"
